JAVA 21 compliance update
Signed-off-by: Juergen Albert <j.albert@data-in-motion.biz>